data/derived/comb/progs/unify/prog8509.ml.out
Characters 86-95:
  |(y,z) -> (y+1, bigAdd((mulByDigit x l1)@clone 0 y) z) in
                                           ^^^^^^^^^
Error: This expression has type int list list
       but an expression was expected of type int list
       Type int list is not compatible with type int 
